--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "npm": "please-use-yarn",
     "yarn": ">= 1.22.22"
   },
+  "scripts": {
+    "start": "webpack serve --env port=3001",
+    "build:prod": "webpack --env mode=production",
+    "build:dev": "webpack --env mode=development",
+    "analyze:prod": "webpack --env mode=production --env analyze=enabled",
+    "analyze:dev": "webpack --env mode=development --env analyze=enabled"
+  },
   "devDependencies": {
     "@types/node": "~25.0.10",
     "@types/webpack": "~5.28.5",
