--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,25 @@
 {
   "compilerOptions": {
+    "newLine": "lf",
     "outDir": "./dist/",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./src/*"]
+    },
     "noImplicitAny": true,
     "module": "ESNext",
     "target": "es6",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": true,
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strictNullChecks": true
+  },
+  "include": ["./config", "./src", "webpack.config.ts"],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
   }
 }
