--- a/package.json
+++ b/package.json
@@ -19,13 +19,22 @@
   },
   "devDependencies": {
     "@types/node": "~25.0.10",
+    "@types/react": "~19.2.10",
+    "@types/react-dom": "~19.2.3",
     "@types/webpack": "~5.28.5",
+    "@types/webpack-bundle-analyzer": "~4.7.0",
     "html-webpack-plugin": "~5.6.6",
+    "mini-css-extract-plugin": "~2.10.0",
     "ts-loader": "~9.5.4",
     "ts-node": "~10.9.2",
     "typescript": "~5.9.3",
     "webpack": "~5.104.1",
-    "webpack-cli": "~6.0.1"
+    "webpack-bundle-analyzer": "~5.2.0",
+    "webpack-cli": "~6.0.1",
+    "webpack-dev-server": "~5.2.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "~19.2.4",
+    "react-dom": "~19.2.4"
+  }
 }
