--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@types/react-dom": "~19.2.3",
     "@types/webpack": "~5.28.5",
     "@types/webpack-bundle-analyzer": "~4.7.0",
+    "css-loader": "~7.1.3",
     "html-webpack-plugin": "~5.6.6",
     "mini-css-extract-plugin": "~2.10.0",
+    "sass": "~1.97.3",
+    "sass-loader": "~16.0.6",
+    "style-loader": "~4.0.0",
     "ts-loader": "~9.5.4",
     "ts-node": "~10.9.2",
     "typescript": "~5.9.3",
@@ -34,7 +38,9 @@
     "webpack-dev-server": "~5.2.3"
   },
   "dependencies": {
+    "modern-normalize": "~3.0.1",
     "react": "~19.2.4",
-    "react-dom": "~19.2.4"
+    "react-dom": "~19.2.4",
+    "react-router": "~7.13.0"
   }
 }
