--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "analyze:dev": "webpack --env mode=development --env analyze=enabled"
   },
   "devDependencies": {
+    "@svgr/webpack": "~8.1.0",
     "@types/node": "~25.0.10",
     "@types/react": "~19.2.10",
     "@types/react-dom": "~19.2.3",
