--- a/package.json
+++ b/package.json
@@ -39,9 +39,13 @@
     "webpack-dev-server": "~5.2.3"
   },
   "dependencies": {
+    "i18next": "~25.8.4",
+    "i18next-browser-languagedetector": "~8.2.0",
+    "i18next-http-backend": "~3.0.2",
     "modern-normalize": "~3.0.1",
     "react": "~19.2.4",
     "react-dom": "~19.2.4",
+    "react-i18next": "~16.5.4",
     "react-router": "~7.13.0"
   }
 }
