--- a/package.json
+++ b/package.json
@@ -15,24 +15,41 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "analyze:prod": "webpack --env mode=production --env analyze=enabled",
-    "analyze:dev": "webpack --env mode=development --env analyze=enabled"
+    "analyze:dev": "webpack --env mode=development --env analyze=enabled",
+    "lint:es": "eslint . --ext .js,.jsx,.ts,.tsx --report-unused-disable-directives",
+    "lint:es:fix": "yarn run lint:es --fix",
+    "lint:es:quiet": "yarn run lint:es --quiet",
+    "lint:es:fix:quiet": "yarn run lint:es:quiet --fix",
+    "lint:prettier:fix": "prettier src --write"
   },
   "devDependencies": {
+    "@eslint/js": "~9.38.0",
     "@svgr/webpack": "~8.1.0",
     "@types/node": "~25.0.10",
     "@types/react": "~19.2.10",
     "@types/react-dom": "~19.2.3",
     "@types/webpack": "~5.28.5",
+    "@typescript-eslint/eslint-plugin": "~8.46.2",
+    "@typescript-eslint/parser": "~8.46.2",
     "@types/webpack-bundle-analyzer": "~4.7.0",
+    "eslint": "~9.38.0",
+    "eslint-config-prettier": "~10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "~7.37.5",
+    "eslint-plugin-react-hooks": "~7.0.1",
+    "eslint-plugin-react-refresh": "~0.4.24",
     "css-loader": "~7.1.3",
     "html-webpack-plugin": "~5.6.6",
     "mini-css-extract-plugin": "~2.10.0",
     "sass": "~1.97.3",
     "sass-loader": "~16.0.6",
     "style-loader": "~4.0.0",
+    "prettier": "~3.6.2",
     "ts-loader": "~9.5.4",
     "ts-node": "~10.9.2",
     "typescript": "~5.9.3",
+    "typescript-eslint": "~8.46.2",
     "webpack": "~5.104.1",
     "webpack-bundle-analyzer": "~5.2.0",
     "webpack-cli": "~6.0.1",
