--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lint:es:fix": "yarn run lint:es --fix",
     "lint:es:quiet": "yarn run lint:es --quiet",
     "lint:es:fix:quiet": "yarn run lint:es:quiet --fix",
-    "lint:prettier:fix": "prettier src --write"
+    "lint:scss": "yarn stylelint \"**/*.scss\"",
+    "lint:scss:fix": "yarn run lint:scss -- --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,scss,json}\""
   },
   "devDependencies": {
     "@eslint/js": "~9.38.0",
@@ -29,9 +31,10 @@
     "@types/react": "~19.2.10",
     "@types/react-dom": "~19.2.3",
     "@types/webpack": "~5.28.5",
+    "@types/webpack-bundle-analyzer": "~4.7.0",
     "@typescript-eslint/eslint-plugin": "~8.46.2",
     "@typescript-eslint/parser": "~8.46.2",
-    "@types/webpack-bundle-analyzer": "~4.7.0",
+    "css-loader": "~7.1.3",
     "eslint": "~9.38.0",
     "eslint-config-prettier": "~10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -39,13 +42,15 @@
     "eslint-plugin-react": "~7.37.5",
     "eslint-plugin-react-hooks": "~7.0.1",
     "eslint-plugin-react-refresh": "~0.4.24",
-    "css-loader": "~7.1.3",
     "html-webpack-plugin": "~5.6.6",
     "mini-css-extract-plugin": "~2.10.0",
+    "prettier": "~3.6.2",
     "sass": "~1.97.3",
     "sass-loader": "~16.0.6",
     "style-loader": "~4.0.0",
-    "prettier": "~3.6.2",
+    "stylelint": "^17.1.1",
+    "stylelint-config-standard-scss": "^17.0.0",
+    "stylelint-order": "^7.0.1",
     "ts-loader": "~9.5.4",
     "ts-node": "~10.9.2",
     "typescript": "~5.9.3",
