--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint:es:fix:quiet": "yarn run lint:es:quiet --fix",
     "lint:scss": "yarn stylelint \"**/*.scss\"",
     "lint:scss:fix": "yarn run lint:scss --fix",
-    "format": "prettier --write \"src/**/*.{ts,tsx,scss,json}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,scss,json}\"",
+    "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "~9.38.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-react-hooks": "~7.0.1",
     "eslint-plugin-react-refresh": "~0.4.24",
     "html-webpack-plugin": "~5.6.6",
+    "jest": "~30.2.0",
     "mini-css-extract-plugin": "~2.10.0",
     "prettier": "~3.6.2",
     "sass": "~1.97.3",
