--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@babel/preset-typescript": "~7.28.5",
     "@eslint/js": "~9.38.0",
     "@svgr/webpack": "~8.1.0",
+    "@testing-library/dom": "~10.4.1",
+    "@testing-library/jest-dom": "~6.9.1",
+    "@testing-library/react": "~16.3.2",
     "@types/jest": "~30.0.0",
     "@types/node": "~25.0.10",
-    "@types/react": "~19.2.10",
+    "@types/react": "~19.2.14",
     "@types/react-dom": "~19.2.3",
     "@types/webpack": "~5.28.5",
     "@types/webpack-bundle-analyzer": "~4.7.0",
@@ -51,6 +54,7 @@
     "eslint-plugin-react-hooks": "~7.0.1",
     "eslint-plugin-react-refresh": "~0.4.24",
     "html-webpack-plugin": "~5.6.6",
+    "identity-obj-proxy": "~3.0.0",
     "jest": "~30.2.0",
     "jest-environment-jsdom": "~30.2.0",
     "mini-css-extract-plugin": "~2.10.0",
