--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "lint:scss": "yarn stylelint \"**/*.scss\"",
     "lint:scss:fix": "yarn run lint:scss --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,scss,json}\"",
-    "test:unit": "jest --config ./config/jest/jest.config.ts"
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "sb": "storybook dev -p 6006 -c config/storybook",
+    "build-sb": "storybook build -c config/storybook"
   },
   "devDependencies": {
     "@babel/core": "~7.29.0",
@@ -31,6 +33,11 @@
     "@babel/preset-react": "~7.28.5",
     "@babel/preset-typescript": "~7.28.5",
     "@eslint/js": "~9.38.0",
+    "@storybook/addon-docs": "^10.2.8",
+    "@storybook/addon-onboarding": "^10.2.8",
+    "@storybook/addon-styling-webpack": "~3.0.0",
+    "@storybook/addon-webpack5-compiler-swc": "^4.0.2",
+    "@storybook/react-webpack5": "^10.2.8",
     "@svgr/webpack": "~8.1.0",
     "@testing-library/dom": "~10.4.1",
     "@testing-library/jest-dom": "~6.9.1",
@@ -53,6 +60,7 @@
     "eslint-plugin-react": "~7.37.5",
     "eslint-plugin-react-hooks": "~7.0.1",
     "eslint-plugin-react-refresh": "~0.4.24",
+    "eslint-plugin-storybook": "^10.2.8",
     "html-webpack-plugin": "~5.6.6",
     "identity-obj-proxy": "~3.0.0",
     "jest": "~30.2.0",
@@ -61,6 +69,7 @@
     "prettier": "~3.6.2",
     "sass": "~1.97.3",
     "sass-loader": "~16.0.6",
+    "storybook": "^10.2.8",
     "style-loader": "~4.0.0",
     "stylelint": "^17.1.1",
     "stylelint-config-standard-scss": "^17.0.0",
