--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,scss,json}\"",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "sb": "storybook dev --no-open -p 6006 -c config/storybook ",
-    "build-sb": "storybook build -c config/storybook"
+    "build:sb": "storybook build -c config/storybook -o ./sb-static",
+    "test:ui": "test-storybook --url http://127.0.0.1:6006 --config-dir config/storybook --testTimeout=60000",
+    "test:ui:approve": "test-storybook --url http://127.0.0.1:6006 --config-dir config/storybook --testTimeout=60000 --updateSnapshot"
   },
   "devDependencies": {
     "@babel/core": "~7.29.0",
@@ -38,11 +40,13 @@
     "@storybook/addon-styling-webpack": "~3.0.0",
     "@storybook/addon-webpack5-compiler-swc": "^4.0.2",
     "@storybook/react-webpack5": "^10.2.8",
+    "@storybook/test-runner": "~0.24.2",
     "@svgr/webpack": "~8.1.0",
     "@testing-library/dom": "~10.4.1",
     "@testing-library/jest-dom": "~6.9.1",
     "@testing-library/react": "~16.3.2",
     "@types/jest": "~30.0.0",
+    "@types/jest-image-snapshot": "~6.4.1",
     "@types/node": "~25.0.10",
     "@types/react": "~19.2.14",
     "@types/react-dom": "~19.2.3",
@@ -65,7 +69,9 @@
     "identity-obj-proxy": "~3.0.0",
     "jest": "~30.2.0",
     "jest-environment-jsdom": "~30.2.0",
+    "jest-image-snapshot": "~6.5.1",
     "mini-css-extract-plugin": "~2.10.0",
+    "playwright": "~1.58.2",
     "prettier": "~3.6.2",
     "sass": "~1.97.3",
     "sass-loader": "~16.0.6",
