feat(visual-testing): add HTML report generation for visual regression tests

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ dist-ssr
 *storybook.log
 storybook-static
 screen-tests/diffs
+screen-tests/current
+screen-tests/report.html
+screen-tests/report.json
