--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "yarn": ">= 1.22.22"
   },
   "scripts": {
+    "postinstall": "husky",
     "dev": "webpack serve --env port=3001",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
@@ -22,6 +23,7 @@
     "lint:es:fix:quiet": "yarn run lint:es:quiet --fix",
     "lint:scss": "yarn stylelint \"**/*.scss\"",
     "lint:scss:fix": "yarn run lint:scss --fix",
+    "type-check": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,scss,json}\"",
     "sb": "storybook dev --no-open -p 6006 -c config/storybook ",
     "build:sb": "storybook build -c config/storybook -o ./sb-static",
@@ -69,10 +71,12 @@
     "eslint-plugin-react-refresh": "~0.4.24",
     "eslint-plugin-storybook": "^10.2.8",
     "html-webpack-plugin": "~5.6.6",
+    "husky": "~9.1.7",
     "identity-obj-proxy": "~3.0.0",
     "jest": "~30.2.0",
     "jest-environment-jsdom": "~30.2.0",
     "jest-image-snapshot": "~6.5.1",
+    "lint-staged": "~16.2.7",
     "mini-css-extract-plugin": "~2.10.0",
     "playwright": "~1.58.2",
     "prettier": "~3.6.2",
@@ -86,6 +90,7 @@
     "stylelint-order": "^7.0.1",
     "ts-loader": "~9.5.4",
     "ts-node": "~10.9.2",
+    "tsc-files": "~1.1.4",
     "typescript": "~5.9.3",
     "typescript-eslint": "~8.46.2",
     "webpack": "~5.104.1",
