--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "lint:es:fix:quiet": "yarn run lint:es:quiet --fix",
     "lint:scss": "yarn stylelint \"**/*.scss\"",
     "lint:scss:fix": "yarn run lint:scss --fix",
-    "type-check": "tsc --noEmit",
+    "lint:ts": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,scss,json}\"",
     "sb": "storybook dev --no-open -p 6006 -c config/storybook ",
     "build:sb": "storybook build -c config/storybook -o ./sb-static",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "test-storybook --url http://127.0.0.1:6006 --config-dir config/storybook --testTimeout=60000",
+    "test:ui:ci": "start-server-and-test 'yarn http-server sb-static --port 6006 -s' http://127.0.0.1:6006 'yarn test:ui'",
     "test:ui:approve": "test-storybook --url http://127.0.0.1:6006 --config-dir config/storybook --testTimeout=60000 --updateSnapshot",
     "test:ui:report:json": "node scripts/generate-visual-json-report.mjs",
     "test:ui:report:html": "reg-cli --from screen-tests/report.json --report screen-tests/report.html",
@@ -71,6 +72,7 @@
     "eslint-plugin-react-refresh": "~0.4.24",
     "eslint-plugin-storybook": "^10.2.8",
     "html-webpack-plugin": "~5.6.6",
+    "http-server": "~14.1.1",
     "husky": "~9.1.7",
     "identity-obj-proxy": "~3.0.0",
     "jest": "~30.2.0",
@@ -83,6 +85,7 @@
     "reg-cli": "~0.18.14",
     "sass": "~1.97.3",
     "sass-loader": "~16.0.6",
+    "start-server-and-test": "~2.1.3",
     "storybook": "^10.2.8",
     "style-loader": "~4.0.0",
     "stylelint": "^17.1.1",
