feat(storybook): add explicit .ts extension to import and adjust TypeScript configuration
- Add .ts extension to css-loader import in Storybook main config
- Increase visual regression failureThreshold from 0.01 to 2 percent
- Add include pattern for .ts and .tsx files in Storybook tsconfig
- Exclude config/storybook directory from root TypeScript compilation

--- a/config/storybook/tsconfig.json
+++ b/config/storybook/tsconfig.json
@@ -4,5 +4,6 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "include": ["./**/*.ts", "./**/*.tsx"]
 }
