--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "strictNullChecks": true
   },
   "include": ["./config", "./src", "webpack.config.ts"],
+  "exclude": ["node_modules", "config/storybook"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
