feat(fonts): add Roboto font family with optimized asset loading
- Add Roboto font files (400, 500, 700 weights) in woff2 format
- Create fonts.scss with @font-face declarations for Roboto variants
- Update global font family from Consolas to Roboto with fallbacks
- Add font rendering optimization for consistent screenshot testing
- Split webpack file loader into separate fonts and images loaders
- Configure asset/resource type with custom output paths for fonts and images

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "strictNullChecks": true
   },
   "include": ["./config", "./src", "webpack.config.ts"],
-  "exclude": ["node_modules", "config/storybook"],
+  "exclude": ["node_modules", "config/storybook", "build", "dist"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
