--- a/config/storybook/tsconfig.json
+++ b/config/storybook/tsconfig.json
@@ -5,5 +5,6 @@
     "allowImportingTsExtensions": true,
     "noEmit": true
   },
-  "include": ["./**/*.ts", "./**/*.tsx"]
+  "include": ["./**/*.ts", "./**/*.tsx"],
+  "exclude": ["../../node_modules", "../../build", "../../dist"]
 }
