--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "webpack-dev-server": "~5.2.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "~2.11.2",
     "i18next": "~25.8.4",
     "i18next-browser-languagedetector": "~8.2.0",
     "i18next-http-backend": "~3.0.2",
@@ -109,6 +110,7 @@
     "react": "~19.2.4",
     "react-dom": "~19.2.4",
     "react-i18next": "~16.5.4",
+    "react-redux": "~9.2.0",
     "react-router": "~7.13.0"
   }
 }
