--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jest": "~30.2.0",
     "jest-environment-jsdom": "~30.2.0",
     "jest-image-snapshot": "~6.5.1",
+    "json-server": "~1.0.0-beta.9",
     "lint-staged": "~16.2.7",
     "mini-css-extract-plugin": "~2.10.0",
     "playwright": "~1.58.2",
