--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "postinstall": "husky",
     "dev": "webpack serve --env port=3001",
+    "dev:serv": "node ./json-server/index.cjs",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "analyze:prod": "webpack --env mode=production --env analyze=enabled",
@@ -78,7 +79,7 @@
     "jest": "~30.2.0",
     "jest-environment-jsdom": "~30.2.0",
     "jest-image-snapshot": "~6.5.1",
-    "json-server": "~1.0.0-beta.9",
+    "json-server": "0.17.4",
     "lint-staged": "~16.2.7",
     "mini-css-extract-plugin": "~2.10.0",
     "playwright": "~1.58.2",
